# CloudNature

./: .coderabbit.yaml  .env.sample  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  CONTEXT.md  README.md  SECURITY.md  constants.tsx  deploy.sh  docker-compose.yml  eslint.config.mjs  index.html  metadata.json  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  rotate-api-key.sh  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  types.ts
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_pdf.py
backend/app/: config.py  db.py  main.py
backend/app/api/v1/: estimate.py  health.py  reports.py  router.py
backend/app/core/: pricing_engine.py  sanitizer.py
backend/app/core/llm/: adapter.py  factory.py  fallback.py  gemini_adapter.py  openai_adapter.py
backend/app/models/: __init__.py  generated.py  report_log.py  session.py  step_answer.py
backend/app/schemas/: __init__.py  llm_output.py  request.py  response.py  step_options.py
backend/app/services/: action_advisor.py  email_service.py  error_notification_service.py  estimate_service.py  ga4_service.py  google_auth.py  notion_service.py  pdf_service.py  search_console_service.py  session_service.py
backend/app/tasks/: cleanup.py  weekly_report.py
backend/app/templates/: estimate_email.html  estimate_notification.html  weekly_report_email.html
backend/docs/: estimate_logic.md
backend/tests/: test_estimate_service_fallback.py  test_fallback_adapter.py  test_gemini_adapter.py  test_idempotency.py  test_pricing_engine.py
(+325 files in other folders)
